[package]
name = "cena-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["macros", "rt", "fs"]}

mysql_async = "0.30.0"

serde = "1.0.147"

cron = "0.12"

mlua = {version = "0.8", features = ["lua54", "async", "vendored", "serialize"]}

clap = {version = "4.0.11", features = ["derive"]}

dateparser = "0.1.7"
chrono = "0.4"
