[package]
name = "lua-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mysql = ["mysql_async", "dateparser"]
time = []

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "rt-multi-thread", "time"] }

# serde = "1.0"

cron = "0.12"

mlua = { version = "0.8", features = ["lua54", "async", "vendored", "serialize"] }

clap = { version = "4.2", features = ["derive"] }

chrono = "0.4"

mysql_async = { version = "0.31", optional = true }
dateparser = { version = "0.2", optional = true }

[profile.release]
debug = false
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
# strip = 'symbols'
debug-assertions = false
overflow-checks = false
rpath = false
